--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,143 +1,160 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Contacto</title>
-    <meta name="description" content="BuscaPsic es un buscador para encontrar tu psicologo mediante filtros que hacen de tu busqueda un proceso adaptado a tus necesidades">
-    <meta name="keywords" content="BuscaPsic, buscador, buscar, psicologo, analista, analisis, terapia, psicoanalista, cognitivo-conductual, tcc, terapia, busqueda">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Josefin+Sans:wght@300&family=Montserrat+Alternates:wght@300&display=swap"
+        rel="stylesheet">
+    <title>Contacto</title>
+    <meta name="description"
+        content="BuscaPsic es un buscador para encontrar tu psicologo mediante filtros que hacen de tu busqueda un proceso adaptado a tus necesidades">
+    <meta name="keywords"
+        content="BuscaPsic, buscador, buscar, psicologo, analista, analisis, terapia, psicoanalista, cognitivo-conductual, tcc, terapia, busqueda">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../scss/style.css">
 
-    <body>
+<body>
 
-<!--Barra de navegacion-->
-<div class="conteiner-fluid">
-<div class="row">
-    <div class="col animate__animated animate__fadeInLeftBig animate__faster">
-    <nav class="navbar navbar-expand-lg" id="navbar" >
-    <div class="container-fluid animate__animated animate__fadeIn animate__slow">
-        <a class="navbar-brand" href="../index.html">
-        <img src="../multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="imagen-logo-navbar mb-2 ms-2"></a>
-        <a class="navbar-brand" href="../index.html"><h1 class="fw-light">BuscaPsic</h1></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav  ms-1 me-3 fs-5">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="./orientacion.html">Orientación</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="./contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="./Buscar.html">Buscar</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
-            </li>
-            </ul>
-                </div>
-        </div>
-            </nav>
-        </div>
-        </div>
-</div>
-
-
-<!--Banner-->
-<div class="conteiner-fluid">
-    <div class="row">
-        <div class="col">
-        <header>
-    <nav class="navbar navbar-light" id="banner">
-                  <!--Breadcrumb-->
-                  <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                    <ol class="breadcrumb p-1 ">
-                      <li><i class='bx bxs-home pe-1' style='color:#1a1eff'></i></li>
-                      <li class="breadcrumb-item"><a href="./index.html">Inicio</a></li>
-                      <li class="breadcrumb-item active text-success" aria-current="page">Contacto</li>
-                    </ol>
-                    </nav>
-        <div class="container-fluid p-4 text-white" id="banner-text">
-        <h1 class="display-1">
-            Contáctanos
-        </h1>
-        </div>
-    </nav>
-</header>
-</div>
-</div>
-</div>
-<!--Form-->
-<div class="conteiner-fluid">
-    <div class="row">
-        <div class="col-md p-2 animate__animated animate__fadeIn animate__delay-1s" >
-            <form class="contacto">
-        <div class="mb-3">
-                <label for="InputEmail" class="form-label fs-4">Email</label>
-                <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
-                </div>
-        <div class="mb-3">
-                <label for="Inputfechadenac" class="form-label fs-4">Fecha de nacimiento</label>
-                <input type="date" class="form-control" id="Inputfechadenac" aria-describedby="fechadenacHelp">
-        </div>
-        <div class="mb-3">
-            <label for="Inputdni" class="form-label fs-4">Número de documento</label>
-            <input type="text" class="form-control" id="Inputdni" aria-describedby="dniHelp">
-        </div>
-        <div class="mb-3">
-            <label for="Inputconsulta" class="form-label fs-3 d-flex">Consulta</label>
-            <textarea name="consulta" id="consulta" cols="30" rows="10"></textarea>
-        </div>
-        <div class="mb-3">
-            <button type="button" class="btn btn-primary ">Enviar</button>
-            <button type="button" class="btn btn-secondary ">Reset</button>
-        </div>
-    </form>
-        </div>
+    <!--Barra de navegacion-->
+    <div class="conteiner-fluid">
+        <div class="row">
+            <div class="col animate__animated animate__fadeInLeftBig animate__faster">
+                <nav class="navbar navbar-expand-lg" id="navbar">
+                    <div class="container-fluid animate__animated animate__fadeIn animate__slow">
+                        <a class="navbar-brand" href="../index.html">
+                            <img src="../multimedia/low-kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png"
+                                alt="Logo-de-marca-BuscaPsic" width="45" height="50"
+                                class="imagen-logo-navbar mb-2 ms-2"></a>
+                        <a class="navbar-brand" href="../index.html">
+                            <h1 class="fw-light">BuscaPsic</h1>
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav  ms-1 me-3 fs-5">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./orientacion.html">Orientación</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./buscar.html">Buscar</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
 
+
+    <!--Banner-->
+    <header>
+        <div class="conteiner-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="card text-center mb-2 mt-2 " id="banner">
+                        <!--Breadcrumb-->
+                        <div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                            <ol class="breadcrumb p-1 ">
+                                <li><i class='bx bxs-home pe-1' style='color:#ffffff'></i></li>
+                                <li class="breadcrumb-item"><a class="text-white" href="./index.html">Inicio</a></li>
+                                <li class="breadcrumb-item active text-success" aria-current="page">Contacto</li>
+                            </ol>
+                        </div>
+                        <div class="container-fluid p-4 text-white" id="banner-text">
+                            <h1 class="display-1">
+                                Contáctanos
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--Form-->
+    <main>
+        <div class="conteiner-fluid">
+            <div class="row">
+                <div class="col-md p-2 animate__animated animate__fadeIn animate__delay-1s">
+                    <form class="contacto">
+                        <div class="mb-3">
+                            <label for="InputEmail" class="form-label fs-4">Email</label>
+                            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Inputfechadenac" class="form-label fs-4">Fecha de nacimiento</label>
+                            <input type="date" class="form-control" id="Inputfechadenac"
+                                aria-describedby="fechadenacHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Inputdni" class="form-label fs-4">Número de documento</label>
+                            <input type="text" class="form-control" id="Inputdni" aria-describedby="dniHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Inputconsulta" class="form-label fs-3 d-flex">Consulta</label>
+                            <textarea name="consulta" id="consulta" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <button type="button" class="btn btn-outline-light" id="boton-1">Enviar</button>
+                            <button type="button" class="btn btn-outline-light" id="boton-3">Reset</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!--Pie de pagina-->
-<div class="conteiner-fluid" >
     <footer>
-    <div class="row animate__animated animate__fadeIn animate__slower" id="pie-conteiner" >
-    <div class="col-md-4  ">
-    <section class="pie-de-pagina animate__animated animate__fadeIn animate__delay-1s ">
-        <ul>
-            <li><a href="">- Cookies</a></li>
-            <li><a href="">- Créditos</a></li>
-            <li><a href="">- Política de privacidad</a></li>
-            <li><a href="./index.html">- Inicio</a></li>
-            </ul>
-            <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
-    </section>
-</div>
-<div class="col-md-4 ps-3 pt-2 fs-1 animate__animated animate__fadeIn animate__delay-1s">
-    <i class='bx bxl-twitter' style='color:#fffcfb' ></i>
-    <i class='bx bxl-facebook-square' style='color:#fffcfb' ></i>
-    <i class='bx bxl-instagram' style='color:#fffcfb' ></i>
-</div>
-<div class="col-md-4 animate__animated animate__fadeIn animate__delay-1s" id="">
-    <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="colegio-depsicologos-pba">
-</div>
-</div>
-</footer>
-</div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <div class="conteiner-fluid">
+            <div class="row animate__animated animate__fadeIn animate__slower" id="pie-conteiner">
+                <div class="col-md-4  ">
+                    <section class="pie-de-pagina animate__animated animate__fadeIn animate__delay-1s ">
+                        <ul>
+                            <li><a href="">- Cookies</a></li>
+                            <li><a href="">- Créditos</a></li>
+                            <li><a href="">- Política de privacidad</a></li>
+                            <li><a href="./index.html">- Inicio</a></li>
+                        </ul>
+                        <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
+                    </section>
+                </div>
+                <div class="col-md-4 ps-3 pt-2 fs-1 animate__animated animate__fadeIn animate__delay-1s">
+                    <i class='bx bxl-twitter' style='color:#fffcfb'></i>
+                    <i class='bx bxl-facebook-square' style='color:#fffcfb'></i>
+                    <i class='bx bxl-instagram' style='color:#fffcfb'></i>
+                </div>
+                <div class="col-md-4 animate__animated animate__fadeIn animate__delay-1s" id="">
+                    <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie"
+                        alt="colegio-depsicologos-pba">
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
-</html>
 
+</html>
